Frame#setMaximizedbounds not working properly in multi screen environments

XMLWordPrintable

    • b10

        The issue has already been reported as bug 7010721 (http://bugs.java.com/bugdatabase/view_bug.do?bug_id=7010721) and is marked as fixed. However it's still there with a different behavior. The maximized bounds of the first (default) screen will be used for the secondary screen if the screen resolution of the default screen is less than the screen resolution of the secondary screen. See also related issue http://bugs.java.com/bugdatabase/view_bug.do?bug_id=6829250. Another related issue is https://bugs.openjdk.java.net/browse/JDK-6699851, which seems to have some root cause analysis on the behavior of maximized windows on multi screen monitors.

          1. MultiScreen6699851Test.java
            4 kB
            Wolfgang Zitzelsberger
          2. MultiScreen8176359Test.java
            3 kB
            Wolfgang Zitzelsberger

              Assignee:
              Sergey Bylokhov
              Reporter:
              Wolfgang Zitzelsberger
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

                Created:
                Updated:
                Resolved: