8176359: Frame#setMaximizedbounds not working properly in multi screen environments 8231564: setMaximizedBounds is broken with large display scale and multiple monitors

Reviewed-by: aivanov